--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -172,6 +172,7 @@ body{
 .logo{
 	img{
 		max-width: 200px;
+		padding-bottom:20px;
 	}
 }
 .non-mobile{
@@ -237,7 +238,7 @@ body{
 	}
 	a{
 		&.readmore{
-			font-size: 20px;
+			font-size: 15px;
 			text-transform: uppercase;
 			color:$w;
 			font-weight: 900;
@@ -523,7 +524,8 @@ body{
 		color:$w;
 		padding:20px;
 		font-family: 'Raleway', sans-serif;
-		font-weight:400;
+		font-weight:800;
+		font-size: 36px;
 		div{
 			a{
 				color:$w;
@@ -534,17 +536,21 @@ body{
 			}
 		}
 	}
-	.arrowbut{
+
+}
+.arrowbut{
 		@include transition(1, 1s, 0);
 		
 		.acontent{
 			padding:13px 10px 10px;
 			height:40px;
+			font-size: 10px;
 			font-family: "Raleway";
+			background:$orange;
+			color:$w;
 
 		}
 	}
-}
 //mobile CSS
 @import "_partials/mobile";
 
