--- a/assets/sass/_partials/_custom.scss
+++ b/assets/sass/_partials/_custom.scss
@@ -91,6 +91,7 @@
 		padding:9px 10px 10px;
 		width:88%;
 		height: 40px;
+		font-size: 10px !important;
 		
 	}
 	.astart{
@@ -115,13 +116,7 @@
 		//display: inline-block;
 		float:left;
 	}
-	.acontent{
-		letter-spacing: 1px;
-		background:$orange;
-		color:$w;
-		font-weight: 600;
-		padding:9px 10px 10px;
-	}
+	
 	.astart{
 		height: 40px;
     }
@@ -252,6 +247,9 @@
 .carousel-inner {
     height: 650px;
    // background:$b;
+   @media only screen and  (max-width : 500px) {  
+		height: 800px;
+	}
     
     .content{
     	text-align:center;
@@ -284,6 +282,7 @@
     		background:$lightblue !important;
     		padding:30px 30px 28px !important;
     		text-align: center !important;
+    		font-weight: 800;
     		 a{
     			color:$w !important;
     			font-size: 36px !important;
@@ -293,9 +292,9 @@
 }
 .down{
 	position: absolute;
-	top:50%;
-	margin-top:-50px;
-	z-index:10000 !important;
+	top:67%;
+	//margin-top:-50px;
+	//z-index:10000 !important;
 	img{
 		height: 20px;
     	margin-top: 17px;
@@ -304,7 +303,7 @@
 	&.left{
 		margin-left:-63px;
 		img{
-			margin-left: 19px;
+			margin-left: 22px;
 		}
 	}
 	&.right{
@@ -317,6 +316,7 @@
 .carousel-control{
 	opacity:1.0 !important;
 	text-shadow:none !important;
+	height:50%;
 }
 .ai1ec-posterboard-view{
 	width:100% !important;
@@ -338,6 +338,32 @@
 		}
 	}
 }
+.ai1ec-posterboard-view .ai1ec-event .post-edit-link{
+	top:20px;
+	height:23px;
+}
+
+.contact textarea, .contact input {
+    border: thin solid;
+    border-radius: 5px;
+}
+.blog .seperate{
+	background:$lightblue;
+    height: 1px;
+    margin:auto;
+    margin-top: 50px;
+    margin-bottom: 40px;
+    width: 80%;
+}
+
+.active_title{
+	color:$w !important;
+}
+
+.large_photo .title{
+	margin-top:20px !important;
+}
+
 
 
 
